--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 									</p>
 									<!-- <p> -->
 									<div style="text-align: center;">	
-										<a class="btn btn-primary btn-xl js-scroll-trigger" href="https://github.com/thunlp/FewRel" style="background-color:rgba(00,00,00,0.5);border-color:rgba(255,255,255,0.7);margin-left:20px;">Han, Zhu, Yu, Wang, et al., 2018</a>
+										<a class="btn btn-primary btn-xl js-scroll-trigger" href="https://arxiv.org/abs/1810.10147v1" style="background-color:rgba(00,00,00,0.5);border-color:rgba(255,255,255,0.7);margin-left:20px;">Han, Zhu, Yu, Wang, et al., 2018</a>
 									</div>
 									<br/>
 									Baseline models and a series of toolkits are released in this repo:
@@ -157,13 +157,13 @@
 							<p>
 							<div style="text-align: center;">
 							<div style="text-align: center;">	
-							<a class="btn btn-primary btn-xl js-scroll-trigger" href="https://github.com/thunlp/FewRel" style="background-color:rgba(00,00,00,0.5);border-color:rgba(255,255,255,0.7);margin-left:20px;">[Training Set] (14.3 MB)</a>
+							<a class="btn btn-primary btn-xl js-scroll-trigger" href="https://github.com/thunlp/FewRel/blob/master/data/train.json" style="background-color:rgba(00,00,00,0.5);border-color:rgba(255,255,255,0.7);margin-left:20px;">[Training Set] (14.3 MB)</a>
 							</div>	
 
 							<br/>
 							<br/>
 							<div style="text-align: center;">	
-							<a class="btn btn-primary btn-xl js-scroll-trigger" href="https://github.com/thunlp/FewRel" style="background-color:rgba(00,00,00,0.5);border-color:rgba(255,255,255,0.7);margin-left:20px;">[Validation Set] (3.5 MB)</a>
+							<a class="btn btn-primary btn-xl js-scroll-trigger" href="https://github.com/thunlp/FewRel/blob/master/data/val.json" style="background-color:rgba(00,00,00,0.5);border-color:rgba(255,255,255,0.7);margin-left:20px;">[Validation Set] (3.5 MB)</a>
 							</div>
 
 							</div>
