--- a/fewrel.html
+++ b/fewrel.html
@@ -71,7 +71,7 @@
         <p class="lead" style="color:rgba(255,255,255,1.0)">a <i style="font-size:22px;font-weight:600;">Few</i>-shot <i style="font-size:22px;font-weight:600;">Rel</i>ation classification dataset</p>
         <br/>
         <a class="btn btn-primary btn-xl js-scroll-trigger" href="https://arxiv.org/abs/1810.10147v1" style="border-color:rgba(255,255,255,0.7);background-color:rgba(00,00,00,0.2)">Paper</a>
-        <a class="btn btn-primary btn-xl js-scroll-trigger" href="https://github.com/thunlp/FewRel" style="background-color:rgba(00,00,00,0.2);border-color:rgba(255,255,255,0.7);margin-left:20px;">Gibhub</a>
+        <a class="btn btn-primary btn-xl js-scroll-trigger" href="https://github.com/thunlp/FewRel" style="background-color:rgba(00,00,00,0.2);border-color:rgba(255,255,255,0.7);margin-left:20px;">GitHub</a>
       </div>
     </header>
 
