--- a/fewrel.html
+++ b/fewrel.html
@@ -333,8 +333,26 @@
 																		<td>85.88</td>
 																		<td>-</td>
 																</tr>
+
+
+
 																<tr>
-																		<th scope="row">2</th>
+																	<th scope="row"> 
+																		<p>2</p>
+																	</th>
+																	<td style="word-break:break-word;">
+																		LM-ProtoNet (FGM)
+																		<br/>
+																		<strong>CCL, Baidu Research (Jan 16, 2019)</strong>
+																	</td>
+																	<td>76.40 ± 0.20</td>
+																	<td>89.32 ± 0.11</td>
+																	<td>63.70 ± 0.26</td>
+																	<td>81.40 ± 0.21</td>
+																</tr>
+
+																<tr>
+																		<th scope="row">3</th>
 																		<td>Prototypical Network (CNN)</td>
 																		<td>69.20 ± 0.20</td>
 																		<td>84.79 ± 0.16</td>
@@ -342,7 +360,7 @@
 																		<td>75.55 ± 0.19</td>
 																</tr>
 																<tr>
-																		<th scope="row">3</th>
+																		<th scope="row">4</th>
 																		<td>SNAIL (CNN)</td>
 																		<td>67.29 ± 0.26</td>
 																		<td>79.40 ± 0.22</td>
@@ -350,7 +368,7 @@
 																		<td>68.33 ± 0.259</td>
 																</tr>
 																<tr>
-																		<th scope="row">4</th>
+																		<th scope="row">5</th>
 																		<td>GNN (CNN)</td>
 																		<td>66.23 ± 0.75</td>
 																		<td>81.28 ± 0.62</td>
@@ -358,7 +376,7 @@
 																		<td>64.02 ± 0.77</td>
 																</tr>
 																<tr>
-																		<th scope="row">5</th>
+																		<th scope="row">6</th>
 																		<td>Meta Network (CNN)</td>
 																		<td>64.46 ± 0.54</td>
 																		<td>80.57 ± 0.48</td>
@@ -366,7 +384,7 @@
 																		<td>69.23 ± 0.52</td>
 																</tr>
 																<tr>
-																		<th scope="row">6</th>
+																		<th scope="row">7</th>
 																		<td>kNN (PCNN)</td>
 																		<td>60.28 ± 0.43</td>
 																		<td>72.41 ± 0.39</td>
@@ -374,7 +392,7 @@
 																		<td>59.11 ± 0.30</td>
 																</tr>
 																<tr>
-																		<th scope="row">7</th>
+																		<th scope="row">8</th>
 																		<td>kNN (CNN)</td>
 																		<td>54.67 ± 0.44</td>
 																		<td>68.77 ± 0.41</td>
@@ -382,7 +400,7 @@
 																		<td>55.87 ± 0.31</td>
 																</tr>
 																<tr>
-																		<th scope="row">8</th>
+																		<th scope="row">9</th>
 																		<td>Finetune (CNN)</td>
 																		<td>44.21 ± 0.44</td>
 																		<td>68.66 ± 0.41</td>
@@ -390,7 +408,7 @@
 																		<td>55.04 ± 0.31</td>
 																</tr>
 																<tr>
-																		<th scope="row">9</th>
+																		<th scope="row">10</th>
 																		<td>Finetune (PCNN)</td>
 																		<td>45.64 ± 0.62</td>
 																		<td>57.86 ± 0.61</td>
