--- a/fewrel.html
+++ b/fewrel.html
@@ -159,26 +159,40 @@
 														</thead>
 														<tbody>
 															<!-- Note: this is just an illustration now. Real data should be dynamically inserted here. -->
-
 																<tr>
-																		<th scope="row">1</th>
+																	<th scope="row">
+																		<p>#</p>						
+																	</th>
 																		<td>Human</td>
 																		<td>92.22</td>
 																		<td>-</td>
 																		<td>85.88</td>
 																		<td>-</td>
 																</tr>
-
-
+																<tr>
+																	<th scope="row"> 
+																		<p>1</p>
+																	</th>
+																	<td style="word-break:break-word;">
+																		Matching the Blanks
+																		<br>
+																		<strong>Anonymous</strong>
+																		<br>
+																		(Feb 26, 2019)
+																	</td>
+																	<td>93.86 ± 0.08</td>
+																	<td>97.06 ± 0.04</td>
+																	<td>89.20 ± 0.13</td>
+																	<td>94.27 ± 0.07</td>
 																</tr>
 																<tr>
 																	<th scope="row"> 
 																		<p>2</p>
 																	</th>
 																	<td style="word-break:break-word;">
-																		NEL-SLIP
+																		MLMAN
 																		<br>
-																		<strong>National Engineering Laboratory for Speech and Language Information Processing</strong>
+																		<strong>Anonymous</strong>
 																		<br>
 																		(Jan 10, 2019)
 																	</td>
@@ -210,14 +224,14 @@
 																	<td style="word-break:break-word;">
 																		LM-ProtoNet (FGM)
 																		<br>
-																		<strong>CCL, Baidu Research</strong>
+																		<strong>Anonymous</strong>
 																		<br>
-																		(Jan 16, 2019)
+																		(Feb 15, 2019)
 																	</td>
-																	<td>76.40 ± 0.20</td>
-																	<td>89.32 ± 0.11</td>
-																	<td>63.70 ± 0.26</td>
-																	<td>81.40 ± 0.21</td>
+																	<td>76.60 ± 0.24</td>
+																	<td>89.31 ± 0.13</td>
+																	<td>65.31 ± 0.31</td>
+																	<td>82.10 ± 0.21</td>
 																</tr>
 																<tr>
 																		<th scope="row">5</th>
@@ -233,7 +247,7 @@
 																		<td>67.29 ± 0.26</td>
 																		<td>79.40 ± 0.22</td>
 																		<td>53.28 ± 0.27</td>
-																		<td>68.33 ± 0.26</td>
+																		<td>68.33 ± 0.259</td>
 																</tr>
 																<tr>
 																		<th scope="row">7</th>
