--- a/fewrel.html
+++ b/fewrel.html
@@ -174,9 +174,10 @@
 																		<p>1</p>
 																	</th>
 																	<td style="word-break:break-word;">
-																		Matching the Blanks
+																		Matching the Blanks 
+																		<a href="https://arxiv.org/abs/1906.03158">[paper]</a>
 																		<br>
-																		<strong>Anonymous</strong>
+																		<strong>Google Research</strong>
 																		<br>
 																		(Feb 26, 2019)
 																	</td>
