--- a/fewrel.html
+++ b/fewrel.html
@@ -192,8 +192,10 @@
 																	</th>
 																	<td style="word-break:break-word;">
 																		MLMAN
+																		<a href="https://arxiv.org/abs/1906.06678">[paper]</a>
+																		<a href="https://github.com/ZhixiuYe/MLMAN">[code]</a>
 																		<br>
-																		<strong>Anonymous</strong>
+																		<strong>NEL-SLIP, University of Science and Technology of China</strong>
 																		<br>
 																		(Jan 10, 2019)
 																	</td>
