--- a/fewrel.html
+++ b/fewrel.html
@@ -225,6 +225,22 @@
 																		<p>4</p>
 																	</th>
 																	<td style="word-break:break-word;">
+																		TDCN
+																		<br>
+																		<strong>Anonymous</strong>
+																		<br>
+																		(Jul 23, 2019)
+																	</td>
+																	<td>81.93 ± 0.21</td>
+																	<td>92.08 ± 0.10</td>
+																	<td>72.18 ± 0.28</td>
+																	<td>85.98 ± 0.17</td>
+																</tr>
+																<tr>
+																	<th scope="row"> 
+																		<p>5</p>
+																	</th>
+																	<td style="word-break:break-word;">
 																		LM-ProtoNet (FGM)
 																		<br>
 																		<strong>Anonymous</strong>
@@ -237,7 +253,7 @@
 																	<td>82.10 ± 0.21</td>
 																</tr>
 																<tr>
-																		<th scope="row">5</th>
+																		<th scope="row">6</th>
 																		<td>Prototypical Network (CNN)</td>
 																		<td>69.20 ± 0.20</td>
 																		<td>84.79 ± 0.16</td>
@@ -245,7 +261,7 @@
 																		<td>75.55 ± 0.19</td>
 																</tr>
 																<tr>
-																		<th scope="row">6</th>
+																		<th scope="row">7</th>
 																		<td>SNAIL (CNN)</td>
 																		<td>67.29 ± 0.26</td>
 																		<td>79.40 ± 0.22</td>
@@ -253,7 +269,7 @@
 																		<td>68.33 ± 0.259</td>
 																</tr>
 																<tr>
-																		<th scope="row">7</th>
+																		<th scope="row">8</th>
 																		<td>GNN (CNN)</td>
 																		<td>66.23 ± 0.75</td>
 																		<td>81.28 ± 0.62</td>
@@ -261,7 +277,7 @@
 																		<td>64.02 ± 0.77</td>
 																</tr>
 																<tr>
-																		<th scope="row">8</th>
+																		<th scope="row">9</th>
 																		<td>Meta Network (CNN)</td>
 																		<td>64.46 ± 0.54</td>
 																		<td>80.57 ± 0.48</td>
@@ -269,7 +285,7 @@
 																		<td>69.23 ± 0.52</td>
 																</tr>
 																<tr>
-																		<th scope="row">9</th>
+																		<th scope="row">10</th>
 																		<td>kNN (PCNN)</td>
 																		<td>60.28 ± 0.43</td>
 																		<td>72.41 ± 0.39</td>
@@ -277,7 +293,7 @@
 																		<td>59.11 ± 0.30</td>
 																</tr>
 																<tr>
-																		<th scope="row">10</th>
+																		<th scope="row">11</th>
 																		<td>kNN (CNN)</td>
 																		<td>54.67 ± 0.44</td>
 																		<td>68.77 ± 0.41</td>
@@ -285,7 +301,7 @@
 																		<td>55.87 ± 0.31</td>
 																</tr>
 																<tr>
-																		<th scope="row">11</th>
+																		<th scope="row">12</th>
 																		<td>Finetune (CNN)</td>
 																		<td>44.21 ± 0.44</td>
 																		<td>68.66 ± 0.41</td>
@@ -293,7 +309,7 @@
 																		<td>55.04 ± 0.31</td>
 																</tr>
 																<tr>
-																		<th scope="row">12</th>
+																		<th scope="row">13</th>
 																		<td>Finetune (PCNN)</td>
 																		<td>45.64 ± 0.62</td>
 																		<td>57.86 ± 0.61</td>
