--- a/fewrel/codalab.html
+++ b/fewrel/codalab.html
@@ -482,6 +482,8 @@ pre.line-numbers > code {
 <h1 id="toc_0">Submission Tutorial</h1>
 
 <p>This tutorial will walk you through the whole submission process. By following it step by step, you will get your results on the hidden test set, and, if you wish, have your results listed on the public leaderboard. </p>
+<p> <strong>Note: If the CodaLab worksheet cannot work well or appears to be dead, you can directly email your code and checkpoints to me (cst_hanxu13@163.com).
+</strong></p>
 
 <h2 id="toc_1">Evaluating on the dev set</h2>
 
