--- a/fewrel.html
+++ b/fewrel.html
@@ -181,11 +181,30 @@
 																		<br>
 																		(Feb 26, 2019)
 																	</td>
-																	<td>93.86 ± 0.08</td>
-																	<td>97.06 ± 0.04</td>
-																	<td>89.20 ± 0.13</td>
-																	<td>94.27 ± 0.07</td>
+																	<td>93.86</td>
+																	<td>97.06</td>
+																	<td>89.20</td>
+																	<td>94.27</td>
 																</tr>
+																<tr>
+																	<th scope="row"> 
+																		<p>2</p>
+																	</th>
+																	<td style="word-break:break-word;">
+																		BERT-PAIR
+																		<a href="https://www.aclweb.org/anthology/D19-1649.pdf">[paper]</a>
+																		<a href="https://github.com/thunlp/fewrel">[code]</a>
+																		<br>
+																		<strong>THUNLP, Tsinghua University</strong>
+																		<br>
+																		(Nov 3, 2019)
+																	</td>
+																	<td>88.32</td>
+																	<td>93.22</td>
+																	<td>80.63</td>
+																	<td>87.02</td>
+																</tr>
+
 																<tr>
 																	<th scope="row"> 
 																		<p>2</p>
@@ -199,10 +218,26 @@
 																		<br>
 																		(Jan 10, 2019)
 																	</td>
-																	<td>82.98 ± 0.20</td>
-																	<td>92.66 ± 0.09</td>
-																	<td>73.59 ± 0.26</td>
-																	<td>87.29 ± 0.15</td>
+																	<td>82.98</td>
+																	<td>92.66</td>
+																	<td>73.59</td>
+																	<td>87.29</td>
+																</tr>
+																<tr>
+																	<th scope="row"> 
+																		<p>2</p>
+																	</th>
+																	<td style="word-break:break-word;">
+																		PLATO
+																		<br>
+																		<strong>Primer.ai</strong>
+																		<br>
+																		(Nov 19, 2019)
+																	</td>
+																	<td>82.93</td>
+																	<td>91.76</td>
+																	<td>74.41</td>
+																	<td>85.91</td>
 																</tr>
 																<tr>
 																	<th scope="row"> 
@@ -215,10 +250,10 @@
 																		<br>
 																		(Jan 18, 2019)
 																	</td>
-																	<td>81.40 ± 0.21</td>
-																	<td>92.11 ± 0.10</td>
-																	<td>72.51 ± 0.28</td>
-																	<td>86.03 ± 0.17</td>
+																	<td>81.40</td>
+																	<td>92.11</td>
+																	<td>72.51</td>
+																	<td>86.03</td>
 																</tr>
 																<tr>
 																	<th scope="row"> 
@@ -231,10 +266,10 @@
 																		<br>
 																		(Jul 23, 2019)
 																	</td>
-																	<td>81.93 ± 0.21</td>
-																	<td>92.08 ± 0.10</td>
-																	<td>72.18 ± 0.28</td>
-																	<td>85.98 ± 0.17</td>
+																	<td>81.93</td>
+																	<td>92.08</td>
+																	<td>72.18</td>
+																	<td>85.98</td>
 																</tr>
 																<tr>
 																	<th scope="row"> 
@@ -247,74 +282,74 @@
 																		<br>
 																		(Feb 15, 2019)
 																	</td>
-																	<td>76.60 ± 0.24</td>
-																	<td>89.31 ± 0.13</td>
-																	<td>65.31 ± 0.31</td>
-																	<td>82.10 ± 0.21</td>
+																	<td>76.60</td>
+																	<td>89.31</td>
+																	<td>65.31</td>
+																	<td>82.10</td>
 																</tr>
 																<tr>
 																		<th scope="row">6</th>
 																		<td>Prototypical Network (CNN)</td>
-																		<td>69.20 ± 0.20</td>
-																		<td>84.79 ± 0.16</td>
-																		<td>56.44 ± 0.22</td>
-																		<td>75.55 ± 0.19</td>
+																		<td>74.52</td>
+																		<td>88.40</td>
+																		<td>62.38</td>
+																		<td>80.45</td>
 																</tr>
 																<tr>
 																		<th scope="row">7</th>
 																		<td>SNAIL (CNN)</td>
-																		<td>67.29 ± 0.26</td>
-																		<td>79.40 ± 0.22</td>
-																		<td>53.28 ± 0.27</td>
-																		<td>68.33 ± 0.259</td>
+																		<td>67.29</td>
+																		<td>79.40</td>
+																		<td>53.28</td>
+																		<td>68.33</td>
 																</tr>
 																<tr>
 																		<th scope="row">8</th>
 																		<td>GNN (CNN)</td>
-																		<td>66.23 ± 0.75</td>
-																		<td>81.28 ± 0.62</td>
-																		<td>46.27 ± 0.80</td>
-																		<td>64.02 ± 0.77</td>
+																		<td>66.23</td>
+																		<td>81.28</td>
+																		<td>46.27</td>
+																		<td>64.02</td>
 																</tr>
 																<tr>
 																		<th scope="row">9</th>
 																		<td>Meta Network (CNN)</td>
-																		<td>64.46 ± 0.54</td>
-																		<td>80.57 ± 0.48</td>
-																		<td>53.96 ± 0.56</td>
-																		<td>69.23 ± 0.52</td>
+																		<td>64.46</td>
+																		<td>80.57</td>
+																		<td>53.96</td>
+																		<td>69.23</td>
 																</tr>
 																<tr>
 																		<th scope="row">10</th>
 																		<td>kNN (PCNN)</td>
-																		<td>60.28 ± 0.43</td>
-																		<td>72.41 ± 0.39</td>
-																		<td>46.15 ± 0.31</td>
-																		<td>59.11 ± 0.30</td>
+																		<td>60.28</td>
+																		<td>72.41</td>
+																		<td>46.15</td>
+																		<td>59.11</td>
 																</tr>
 																<tr>
 																		<th scope="row">11</th>
 																		<td>kNN (CNN)</td>
-																		<td>54.67 ± 0.44</td>
-																		<td>68.77 ± 0.41</td>
-																		<td>41.24 ± 0.31</td>
-																		<td>55.87 ± 0.31</td>
+																		<td>54.67</td>
+																		<td>68.77</td>
+																		<td>41.24</td>
+																		<td>55.87</td>
 																</tr>
 																<tr>
 																		<th scope="row">12</th>
 																		<td>Finetune (CNN)</td>
-																		<td>44.21 ± 0.44</td>
-																		<td>68.66 ± 0.41</td>
-																		<td>27.30 ± 0.28</td>
-																		<td>55.04 ± 0.31</td>
+																		<td>44.21</td>
+																		<td>68.66</td>
+																		<td>27.30</td>
+																		<td>55.04</td>
 																</tr>
 																<tr>
 																		<th scope="row">13</th>
 																		<td>Finetune (PCNN)</td>
-																		<td>45.64 ± 0.62</td>
-																		<td>57.86 ± 0.61</td>
-																		<td>29.65 ± 0.40</td>
-																		<td>37.43 ± 0.42</td>
+																		<td>45.64</td>
+																		<td>57.86</td>
+																		<td>29.65</td>
+																		<td>37.43</td>
 																</tr>
 														</tbody>
 											</table>
