--- a/2/fewrel2_da.html
+++ b/2/fewrel2_da.html
@@ -30,7 +30,7 @@
       <ul class="nav navbar-nav navbar-right">
           <li><a href="../fewrel.html" style="margin-right:20px">Home</a></li>
           <li><a href="../1/fewrel1.html" style="margin-right:20px">FewRel 1.0</a></li>
-          <li><a href="../2/fewrel2_da.html" style="margin-right:20px">FewRel 2.0 Domain Adaptation</a></li>
+          <li><a href="../2/fewrel2_da.html" style="margin-right:20px; color: white">FewRel 2.0 Domain Adaptation</a></li>
           <li><a href="../2/fewrel2_nota.html">FewRel 2.0 None-of-the-Above Detection</a></li>
       </ul>
     </nav>
