--- a/1/fewrel1.html
+++ b/1/fewrel1.html
@@ -216,10 +216,25 @@
 																	<td>90.51</td>
 																</tr>
 
-
 																<tr>
 																	<th scope="row"> 
 																		<p>3</p>
+																	</th>
+																	<td style="word-break:break-word;">
+                                                                        Anonymous Pony
+																		<br>
+																		<br>
+																		(Jan 17, 2020)
+																	</td>
+																	<td>91.61</td>
+																	<td>96.01</td>
+																	<td>86.78</td>
+																	<td>91.63</td>
+																</tr>
+    
+																<tr>
+																	<th scope="row"> 
+																		<p>4</p>
 																	</th>
 																	<td style="word-break:break-word;">
                                                                         Anonymous Python
@@ -236,7 +251,7 @@
 
 																<tr>
 																	<th scope="row"> 
-																		<p>4</p>
+																		<p>5</p>
 																	</th>
 																	<td style="word-break:break-word;">
 																		BERT-PAIR
@@ -255,7 +270,7 @@
 
 																<tr>
 																	<th scope="row"> 
-																		<p>5</p>
+																		<p>6</p>
 																	</th>
 																	<td style="word-break:break-word;">
 																		MLMAN
@@ -273,7 +288,7 @@
 																</tr>
 																<tr>
 																	<th scope="row"> 
-																		<p>6</p>
+																		<p>7</p>
 																	</th>
 																	<td style="word-break:break-word;">
 																		PLATO
@@ -289,7 +304,7 @@
 																</tr>
 																<tr>
 																	<th scope="row"> 
-																		<p>7</p>
+																		<p>8</p>
 																	</th>
 																	<td style="word-break:break-word;">
 																		Prototypical Network (LM-Transformer)
@@ -305,7 +320,7 @@
 																</tr>
 																<tr>
 																	<th scope="row"> 
-																		<p>8</p>
+																		<p>9</p>
 																	</th>
 																	<td style="word-break:break-word;">
 																		TDCN
@@ -321,7 +336,7 @@
 																</tr>
 																<tr>
 																	<th scope="row"> 
-																		<p>9</p>
+																		<p>10</p>
 																	</th>
 																	<td style="word-break:break-word;">
 																		LM-ProtoNet (FGM)
@@ -336,7 +351,7 @@
 																	<td>82.10</td>
 																</tr>
 																<tr>
-																		<th scope="row">8</th>
+																		<th scope="row"></th>
 																		<td>Prototypical Network (CNN)</td>
 																		<td>74.52</td>
 																		<td>88.40</td>
@@ -344,7 +359,7 @@
 																		<td>80.45</td>
 																</tr>
 																<tr>
-																		<th scope="row">9</th>
+																		<th scope="row"></th>
 																		<td>SNAIL (CNN)</td>
 																		<td>67.29</td>
 																		<td>79.40</td>
@@ -352,7 +367,7 @@
 																		<td>68.33</td>
 																</tr>
 																<tr>
-																		<th scope="row">10</th>
+																		<th scope="row"></th>
 																		<td>GNN (CNN)</td>
 																		<td>66.23</td>
 																		<td>81.28</td>
@@ -360,7 +375,7 @@
 																		<td>64.02</td>
 																</tr>
 																<tr>
-																		<th scope="row">11</th>
+																		<th scope="row"></th>
 																		<td>Meta Network (CNN)</td>
 																		<td>64.46</td>
 																		<td>80.57</td>
@@ -368,7 +383,7 @@
 																		<td>69.23</td>
 																</tr>
 																<tr>
-																		<th scope="row">12</th>
+																		<th scope="row"></th>
 																		<td>kNN (PCNN)</td>
 																		<td>60.28</td>
 																		<td>72.41</td>
@@ -376,7 +391,7 @@
 																		<td>59.11</td>
 																</tr>
 																<tr>
-																		<th scope="row">13</th>
+																		<th scope="row"></th>
 																		<td>kNN (CNN)</td>
 																		<td>54.67</td>
 																		<td>68.77</td>
@@ -384,7 +399,7 @@
 																		<td>55.87</td>
 																</tr>
 																<tr>
-																		<th scope="row">14</th>
+																		<th scope="row"></th>
 																		<td>Finetune (CNN)</td>
 																		<td>44.21</td>
 																		<td>68.66</td>
@@ -392,7 +407,7 @@
 																		<td>55.04</td>
 																</tr>
 																<tr>
-																		<th scope="row">15</th>
+																		<th scope="row"></th>
 																		<td>Finetune (PCNN)</td>
 																		<td>45.64</td>
 																		<td>57.86</td>
