--- a/2/fewrel2_da.html
+++ b/2/fewrel2_da.html
@@ -184,142 +184,10 @@
 														</thead>
 														<tbody>
 															<!-- Note: this is just an illustration now. Real data should be dynamically inserted here. -->
-																<tr>
-																	<th scope="row"> 
-																		<p>1</p>
-																	</th>
-																	<td style="word-break:break-word;">
-																		Anonymous Pony
-																		<br>
-																		<br>
-																		(Jan 17, 2020)
-																	</td>
-																	<td>76.71</td>
-																	<td>86.69</td>
-																	<td>66.72</td>
-																	<td>78.46</td>
-																</tr>
+                                                            <!-- Note: add result here. -->
+<tr><th scope="row"><p>1</p></th><td style="word-break:break-word;">Anonymous Pony<br><strong></strong><br>(Jan 17, 2020)</td><td>76.71</td><td>86.69</td><td>66.72</td><td>78.46</td></tr><tr><th scope="row"><p>2</p></th><td style="word-break:break-word;">Anonymous Python<br><strong></strong><br>(Dec 25, 2019)</td><td>66.41</td><td>83.52</td><td>51.85</td><td>73.60</td></tr><tr><th scope="row"><p>3</p></th><td style="word-break:break-word;">Anonymous Groundhog<br><strong></strong><br>(Dec 25, 2019)</td><td>67.23</td><td>82.09</td><td>54.32</td><td>71.01</td></tr><tr><th scope="row"><p>4</p></th><td style="word-break:break-word;">BERT-PAIR<a href="https://www.aclweb.org/anthology/D19-1649.pdf">[paper]</a><a href="https://github.com/thunlp/fewrel">[code]</a><br><strong>THUNLP, Tsinghua University</strong><br>(Nov 3, 2019)</td><td>67.41</td><td>78.57</td><td>54.89</td><td>66.85</td></tr><tr><th scope="row"><p>5</p></th><td style="word-break:break-word;">Proto-ADV (CNN)<a href="https://www.aclweb.org/anthology/D19-1649.pdf">[paper]</a><a href="https://github.com/thunlp/fewrel">[code]</a><br><strong>THUNLP, Tsinghua University</strong><br>(Nov 3, 2019)</td><td>42.21</td><td>58.71</td><td>28.91</td><td>44.35</td></tr><tr><th scope="row"><p>6</p></th><td style="word-break:break-word;">Proto-ADV (BERT)<a href="https://www.aclweb.org/anthology/D19-1649.pdf">[paper]</a><a href="https://github.com/thunlp/fewrel">[code]</a><br><strong>THUNLP, Tsinghua University</strong><br>(Nov 3, 2019)</td><td>41.90</td><td>54.74</td><td>27.36</td><td>37.40</td></tr><tr><th scope="row"><p>7</p></th><td style="word-break:break-word;">Proto-BERT<br><strong></strong><br>(Nov 3, 2019)</td><td>40.12</td><td>51.50</td><td>26.45</td><td>36.93</td></tr><tr><th scope="row"><p>8</p></th><td style="word-break:break-word;">Proto-CNN<br><strong></strong><br>(Nov 3, 2019)</td><td>35.09</td><td>49.37</td><td>22.98</td><td>35.22</td></tr>
 
-
-																<tr>
-																	<th scope="row"> 
-																		<p>2</p>
-																	</th>
-																	<td style="word-break:break-word;">
-																		Anonymous Python
-																		<br>
-																		<br>
-																		(Dec 25, 2019)
-																	</td>
-																	<td>66.41</td>
-																	<td>83.52</td>
-																	<td>51.85</td>
-																	<td>73.60</td>
-																</tr>
-
-																<tr>
-																	<th scope="row"> 
-																		<p>3</p>
-																	</th>
-																	<td style="word-break:break-word;">
-                                                                        Anonymous Groundhog
-																		<br>
-																		<br>
-																		(Dec 25, 2019)
-																	</td>
-																	<td>67.23</td>
-																	<td>82.09</td>
-																	<td>54.32</td>
-																	<td>71.01</td>
-																</tr>
-
-																<tr>
-																	<th scope="row"> 
-																		<p>4</p>
-																	</th>
-																	<td style="word-break:break-word;">
-																		BERT-PAIR 
-																		<a href="https://www.aclweb.org/anthology/D19-1649.pdf">[paper]</a>
-                                                                        <a href="https://github.com/thunlp/fewrel">[code]</a>
-																		<br>
-																		<strong>THUNLP, Tsinghua University</strong>
-																		<br>
-																		(Nov 3, 2019)
-																	</td>
-																	<td>67.41</td>
-																	<td>78.57</td>
-																	<td>54.89</td>
-																	<td>66.85</td>
-																</tr>
-
-																<tr>
-																	<th scope="row"> 
-																		<p>5</p>
-																	</th>
-																	<td style="word-break:break-word;">
-																		Proto-ADV (CNN)
-																		<a href="https://www.aclweb.org/anthology/D19-1649.pdf">[paper]</a>
-                                                                        <a href="https://github.com/thunlp/fewrel">[code]</a>
-																		<br>
-																		<strong>THUNLP, Tsinghua University</strong>
-																		<br>
-																		(Nov 3, 2019)
-																	</td>
-																	<td>42.21</td>
-																	<td>58.71</td>
-																	<td>28.91</td>
-																	<td>44.35</td>
-																</tr>
-
-																<tr>
-																	<th scope="row"> 
-																		<p>6</p>
-																	</th>
-																	<td style="word-break:break-word;">
-                                                                        Proto-ADV (BERT)
-																		<a href="https://www.aclweb.org/anthology/D19-1649.pdf">[paper]</a>
-                                                                        <a href="https://github.com/thunlp/fewrel">[code]</a>
-																		<br>
-																		<strong>THUNLP, Tsinghua University</strong>
-																		<br>
-																		(Nov 3, 2019)
-																	</td>
-																	<td>41.90</td>
-																	<td>54.74</td>
-																	<td>27.36</td>
-																	<td>37.40</td>
-																</tr>
-
-																<tr>
-																	<th scope="row"> 
-																		<p>7</p>
-																	</th>
-																	<td style="word-break:break-word;">
-                                                                        Proto-BERT
-																		<br>
-																		(Nov 3, 2019)
-																	</td>
-																	<td>40.12</td>
-																	<td>51.50</td>
-																	<td>26.45</td>
-																	<td>36.93</td>
-																</tr>
-
-																<tr>
-																	<th scope="row"> 
-																		<p>8</p>
-																	</th>
-																	<td style="word-break:break-word;">
-                                                                        Proto-CNN
-																		<br>
-																		(Nov 3, 2019)
-																	</td>
-																	<td>35.09</td>
-																	<td>49.37</td>
-																	<td>22.98</td>
-																	<td>35.22</td>
-																</tr>
-
+                                                            <!-- Note: result part end. -->
 
 														</tbody>
 											</table>
