--- a/2/fewrel2_nota.html
+++ b/2/fewrel2_nota.html
@@ -184,52 +184,10 @@
 														</thead>
 														<tbody>
 															<!-- Note: this is just an illustration now. Real data should be dynamically inserted here. -->
-																<tr>
-																	<th scope="row"> 
-																		<p>1</p>
-																	</th>
-																	<td style="word-break:break-word;">
-																		BERT-PAIR 
-																		<a href="https://www.aclweb.org/anthology/D19-1649.pdf">[paper]</a>
-                                                                        <a href="https://github.com/thunlp/fewrel">[code]</a>
-																		<br>
-																		<strong>THUNLP, Tsinghua University</strong>
-																		<br>
-																		(Nov 3, 2019)
-																	</td>
-																	<td>77.67</td>
-																	<td>84.19</td>
-																	<td>80.31</td>
-																	<td>86.06</td>
-																</tr>
-																<tr>
-																	<th scope="row"> 
-																		<p>2</p>
-																	</th>
-																	<td style="word-break:break-word;">
-																		Proto (BERT)
-																		<br>
-																		(Nov 3, 2019)
-																	</td>
-																	<td>70.02</td>
-																	<td>83.79</td>
-																	<td>45.94</td>
-																	<td>75.21</td>
-																</tr>
-																<tr>
-																	<th scope="row"> 
-																		<p>3</p>
-																	</th>
-																	<td style="word-break:break-word;">
-																		Proto (CNN)
-																		<br>
-																		(Nov 3, 2019)
-																	</td>
-																	<td>60.59</td>
-																	<td>77.79</td>
-																	<td>40.00</td>
-																	<td>61.66</td>
-																</tr>
+                                                            <!-- Note: add result here. -->
+<tr><th scope="row"><p>1</p></th><td style="word-break:break-word;">BERT-PAIR<a href="https://www.aclweb.org/anthology/D19-1649.pdf">[paper]</a><a href="https://github.com/thunlp/fewrel">[code]</a><br><strong>THUNLP, Tsinghua University</strong><br>(Nov 3, 2019)</td><td>77.67</td><td>84.19</td><td>80.31</td><td>86.06</td></tr><tr><th scope="row"><p>2</p></th><td style="word-break:break-word;">Proto (BERT)<br><strong></strong><br>(Nov 3, 2019)</td><td>70.02</td><td>83.79</td><td>45.94</td><td>75.21</td></tr><tr><th scope="row"><p>3</p></th><td style="word-break:break-word;">Proto (CNN)<br><strong></strong><br>(Nov 3, 2019)</td><td>60.59</td><td>77.79</td><td>40.00</td><td>61.66</td></tr>
+
+                                                            <!-- Note: result part end. -->
 
 														</tbody>
 											</table>
